<resources>
    <string name="app_name">Learn Android1</string>
    <string name="wellcome_msg">Wellcome!</string>
    <string name="editTextHint">What is your Name?</string>
    <string name="autoCompliteHint">select your country</string>
    <string name="cheek_agree">I agree to terms and conditions</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">Login</string>
    <string name="birth_year">Select your birth year</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="task_zone">Task Zone!</string>
    <string name="today_is">Today is :</string>
    <string name="add_a_task">add a Task...</string>
    <string name="new_task">New Task</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="set_time">Set Time</string>
    <string name="set_date">Set Date</string>
    <string name="done">Done</string>
    <string name="no_task_found">No Task found!</string>

    <string-array name="country_name">
        <item>Bangladesh</item>
        <item>Barma</item>
        <item>Brazil</item>
        <item>Chaina</item>
        <item>Chili</item>
        <item>Nepal</item>
        <item>Nowakhali! (:</item>
        <item>Newziland</item>

    </string-array>

    <string-array name="year">

        <item>1900</item>
        <item>1901</item>
        <item>1902</item>
        <item>1903</item>
        <item>1904</item>
        <item>1905</item>
        <item>1906</item>
        <item>1907</item>
        <item>1908</item>
        <item>1909</item>
        <item>1910</item>
        <item>1911</item>
        <item>1912</item>
        <item>1913</item>
        <item>1914</item>
        <item>1915</item>
        <item>1916</item>
        <item>1917</item>
        <item>1918</item>
        <item>1919</item>
        <item>1920</item>
        <item>1921</item>
        <item>1922</item>
        <item>1923</item>
        <item>1924</item>
        <item>1925</item>
        <item>1926</item>
        <item>1927</item>
        <item>1928</item>
        <item>1929</item>
        <item>1930</item>
        <item>1931</item>
        <item>1932</item>
        <item>1933</item>
        <item>1934</item>
        <item>1935</item>
        <item>1936</item>
        <item>1937</item>
        <item>1938</item>
        <item>1939</item>
        <item>1940</item>
        <item>1941</item>
        <item>1942</item>
        <item>1943</item>
        <item>1944</item>
        <item>1945</item>
        <item>1946</item>
        <item>1947</item>
        <item>1948</item>
        <item>1949</item>
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>


    </string-array>
</resources>
