<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:weightSum="5"
    android:id="@+id/main_layout"
    tools:context=".Main2Activity">

    <LinearLayout
        android:id="@+id/sub_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#EFB4B4"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/task_zone"
            android:textColor="#FA0000"
            android:textSize="35sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text=""
                android:textColor="#0501FB"
                android:textSize="27sp"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/toggle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textOff="@string/dark"
                android:textOn="@string/light" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_country"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/earth_dark" />

                <TextView
                    android:id="@+id/txt_country"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_gender"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/male" />

                <TextView
                    android:id="@+id/txt_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_age"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:scaleX="1.2"
                    android:src="@drawable/man_dark_age" />

                <TextView
                    android:id="@+id/txt_age"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/today_is"
                        android:textColor="#FF0000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text=""
                        android:textColor="#FF0000"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <AnalogClock
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp" />

                <DigitalClock
                    android:id="@+id/digital_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/add_task"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#B6DDEF"
            android:text="@string/add_a_task"
            android:textAllCaps="false"
            android:textColor="#849E9B"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:visibility="gone"
          android:id="@+id/no_task"
          >
          <ImageView
              android:layout_width="200dp"
              android:layout_height="206dp"
              android:layout_gravity="center"
              android:src="@drawable/relax" />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/no_task_found"
              android:layout_gravity="center"
              android:textColor="#3D5AFE"
              android:textSize="15sp"
              android:textStyle="bold"
              />
      </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/task_view"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="have task"
                android:textSize="50dp"
                />

        </LinearLayout>

    </LinearLayout>


    <include
        layout="@layout/layout"
    />
</LinearLayout>


